@@ -9,7 +9,7 @@ task startJBossCiStore << {
                      "env.storefront.dev", 
                      true, 
                      8787, 
-                     file("$jbossRoot/server/$storeServerName/log/console.log")
+                     file("$buildDir/log/console.log")
 }
 
 task launchDevStore << {
@@ -19,12 +19,10 @@ task launchDevStore << {
 task launchCiStore(type: Tail, dependsOn: [startJBossCiStore]) {
   file        "$jbossRoot/server/$storeServerName/log/server.log"
   file        "$jbossRoot/server/$storeServerName/log/boot.log"  
-  failOn      "ERROR[ ]*\\["
+  failOn      regex: "ERROR[ ]*\\[", postFireTailPeriod: 2000
   //sample log line: 
   // 2011-11-09 04:42:19,264 INFO  [org.jboss.bootstrap.microcontainer.ServerImpl] JBoss (Microcontainer) [5.1.0 (build: SVNTag=JBPAPP_5_1_0 date=201009150028)] Started in 1m:6s:11ms
   succeedOn "INFO[ ]*\\[org\\.jboss\\.bootstrap\\.microcontainer\\.ServerImpl\\].*JBoss \\(Microcontainer\\) \\[.*\\] Started in"
-  //postFailureTailSeconds = 2
-  timeOutSeconds = 300
 }
 
 task shutdownDevStore << {
@@ -52,27 +50,6 @@ task shutdownDevAdmin << {
 /******************************************************************************
 * Utility methods for dealing with local jboss start/stop
 * 
-* environment is one of: 'sandbox', 'development', etc
-* serverType is one of: 'store', 'admin', 'fulfillment', etc
-
-task something(type: StartJBoss) {
-  
-  serverName 'something'
-  systemProperty "atg.dynamo.server.name", serverName
-  //systemProperty "atg.dynamo.modules",     modules 
-  systemProperty "atg.dynamo.data-dir",    "$serverDir/ATG-Data"
-  systemProperty "jboss.server.log.dir",   "$serverDir/log"    
-  systemProperty "java.endorsed.dirs",     "$jbossRoot/lib/endorsed"
-
-  jvmArgs "-Xms512m"
-  jvmArgs "-Xmx1536m"
-  jvmArgs "-XX:MaxPermSize=256m"
-  jvmArgs "-Xdebug"
-  jvmArgs "-Xrunjdwp:transport=dt_socket,address=$debugPort,server=y,suspend=n"
-  
-}
-
-
 */
 def startJBossInstance(serverName, modules, debug=false, debugPort=8787, redirectOutputToFile=null) {
   def serverDir = file("$jbossRoot/server/$serverName")
@@ -90,16 +67,20 @@ def startJBossInstance(serverName, modules, debug=false, debugPort=8787, redirec
     args serverName
     
     if (redirectOutputToFile) {
+      println "> REDIRECTING CONSOLE TO FILE: $redirectOutputToFile"
+      mkdir(redirectOutputToFile.parent)
       def stream = redirectOutputToFile.newOutputStream()
       errorOutput = stream
       standardOutput = stream
     }
 
-    systemProperty "atg.dynamo.server.name", serverName
-    //systemProperty "atg.dynamo.modules",     modules 
-    systemProperty "atg.dynamo.data-dir",    "$serverDir/ATG-Data"
-    systemProperty "jboss.server.log.dir",   "$serverDir/log"    
-    systemProperty "java.endorsed.dirs",     "$jbossRoot/lib/endorsed"
+    systemProperty "log4j.configuration",              "file:$serverDir/conf/bootstrap-log4j.properties"
+    systemProperty "atg.dynamo.server.name",           serverName
+    //systemProperty "atg.dynamo.modules",             modules 
+    systemProperty "atg.dynamo.data-dir",              "$serverDir/ATG-Data"
+    systemProperty "jboss.server.log.dir",             "$serverDir/log"    
+    systemProperty "java.endorsed.dirs",               "$jbossRoot/lib/endorsed"
+    systemProperty "jboss.boot.server.log.file.level", "INFO" 
     //systemProperty "atg.applauncher.versioner.Versionator.debug", "true"
     //jvmArgs "-Dhttp.proxyHost=${proxy}"
     //jvmArgs "-Dhttp.proxyPort=${proxyport}"
@@ -134,7 +115,7 @@ def startJBossInstance(serverName, modules, debug=false, debugPort=8787, redirec
 def stopJBossInstance(serverName) {
   def jnpPort = getJnpPortForJbossServer(environment, serverName)
   
-  javaexec {
+  javaExecAsync {
     main = "org.jboss.Shutdown"
     classpath = files("$jbossRoot/bin/shutdown.jar", "$jbossRoot/client/jbossall-client.jar") 
     args "-s"
